# tauri-s3

./: .env.example  DEVELOPMENT.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.kiro/specs/s3-upload-tool/: design.md  requirements.md  tasks.md
scripts/: setup-dev.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  download.rs  lib.rs  main.rs
src-tauri/tests/: integration_tests.rs
src/components/common/: Button.tsx  ErrorBoundary.tsx  FeedbackOverlay.tsx  Input.tsx  LoadingSpinner.tsx  Modal.tsx  ProgressBar.tsx  ProtectedRoute.tsx  SkeletonLoader.tsx  StatusIndicator.tsx  Toast.tsx  index.ts
src/components/config/: BatchConnectionTest.tsx  BatchOperations.tsx  ConfigCard.tsx  ConfigForm.tsx  ConfigImportExport.tsx  ConfigList.tsx  ConfigTemplateSelector.tsx  ConnectionDiagnostics.tsx  ConnectionTest.tsx  (+2 more)
src/hooks/: index.ts  useConfig.ts  useConfigTemplates.ts  useNavigation.ts  useS3Client.ts
src/pages/: ConfigPage.tsx  DownloadsPage.tsx  FilesPage.tsx  UploadDemo.tsx  UploadPage.tsx  index.ts
src/services/: configService.ts  downloadService.ts  errorHandler.ts  index.ts  s3Service.ts  securityService.ts  templateService.ts
src/stores/: configStore.ts  downloadStore.ts  fileStore.ts  index.ts  uploadStore.ts
src/types/: config.ts  download.ts  error.ts  file.ts  index.ts  security.ts  upload.ts
src/utils/: formatters.ts  lazyLoading.ts  performance.ts  responsive.ts
(+90 files in other folders)
